--- a/package.json
+++ b/package.json
@@ -19,10 +19,14 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@stomp/stompjs": "^7.0.0",
+    "chart.js": "^4.4.3",
     "primeflex": "^3.0.1",
     "primeicons": "^4.1.0",
     "primeng": "^12.2.1",
+    "quill": "^2.0.2",
     "rxjs": "~6.6.0",
+    "sockjs-client": "^1.6.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
@@ -32,6 +36,7 @@
     "@angular/compiler-cli": "~12.2.0",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
+    "@types/sockjs-client": "^1.5.4",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
